--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tsconfig-paths": "^4.2.0",
-    "vavite": "^1.8.1"
+    "vavite": "^1.8.1",
+    "wavesurfer.js": "^7.0.3"
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
