--- a/.github/workflows/dep.yml
+++ b/.github/workflows/dep.yml
@@ -1,12 +1,10 @@
 name: dep
 on:
   push:
-    # We only run this GitHub action upon new commits to `main`
     branches:
       - main
-    # We only run this GitHub action if there are changes in the `docs/` directory
     paths:
-      - /**
+      - /pages/**
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
