Fix ts path errors & github actions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,9 +28,9 @@
         "noFallthroughCasesInSwitch": true
     },
     "include": [
-        "src",
-        "src/entry-server.tsx",
-        "entry-server.tsx"
+        "pages",
+        "renderer",
+        "server"
     ],
     "references": [
         {
