--- a/.github/workflows/dep.yml
+++ b/.github/workflows/dep.yml
@@ -1,10 +1,5 @@
 name: dep
-on:
-  push:
-    branches:
-      - main
-    paths:
-      - /pages/**
+on: push
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -23,8 +18,6 @@ jobs:
         with:
           branch: gh-pages
           folder: /dist/client
-          # Remove previous build files
           clean: true
-          # Do not remove the `.nojekyll` file: we have manually added an empty `.nojekyll` file at the root of the `gh-pages` branch and we don't want having to re-create it after each build.
-          clean-exclude: |
+          clean-exclude:
             .nojekyll
